--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -31,10 +31,10 @@
             </div>
             <div id='operators'>
                 <button type="button" value='/' class="btn btn-operator">/</button>
-                <button type="button" value='*'class="btn btn-operator">*</button>
-                <button type="button" value='-'class="btn btn-operator">-</button>
-                <button type="button" value='+'class="btn btn-operator">+</button>
-                <button type="button" onclick="operate()" class="btn btn-operator">=</button>
+                <button type="button" value='*' class="btn btn-operator">*</button>
+                <button type="button" value='-' class="btn btn-operator">-</button>
+                <button type="button" value='+' class="btn btn-operator">+</button>
+                <button type="button" value='=' class="btn btn-operator">=</button>
             </div>
         </div>
         <script src="calculator.js"></script>
