basic version. come back later and refactor

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -15,8 +15,8 @@
             </div>
             <div id='buttons'>
                 <button type="button" onclick="clearDisplay()" class="btn btn-light">AC</button>
-                <button type="button" class="btn btn-light">+/-</button>
-                <button type="button" class="btn btn-light">%</button>
+                <button type="button" disabled class="btn btn-light">+/-</button>
+                <button type="button" disabled class="btn btn-light">%</button>
                 <button type="button" value='7' class="btn btn-light">7</button>
                 <button type="button" value='8' class="btn btn-light">8</button>
                 <button type="button" value='9' class="btn btn-light">9</button>
@@ -27,7 +27,7 @@
                 <button type="button" value='2' class="btn btn-light">2</button>
                 <button type="button" value='3' class="btn btn-light">3</button>
                 <button type="button" value='0' class="btn btn-light" style="width: 185px;">0</button>
-                <button type="button" class="btn btn-light">,</button>
+                <button type="button" disabled value=',' class="btn btn-light">,</button>
             </div>
             <div id='operators'>
                 <button type="button" value='/' class="btn btn-operator">/</button>
@@ -37,6 +37,6 @@
                 <button type="button" value='=' class="btn btn-operator">=</button>
             </div>
         </div>
-        <script src="calculator.js"></script>
+        <script src="calc.js"></script>
     </body>
 </html>
